# consulx

./: Cargo.toml  README.md
src/: client.rs  errors.rs  lib.rs  parser.rs  repl.rs
src/commands/: kv.rs  mod.rs  watch.rs
