[package]
name = "consulx"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A pure-HTTP Consul KV CLI + REPL built from scratch"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reedline = "0.44.0"
colored = "3.0.0"
anyhow = "1"
thiserror = "2.0.17"
base64 = "0.22"
