[package]
name = "consulx"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Snm Maurya <snmsanatani@gmail.com>"]
description = "A pure-HTTP Consul KV CLI + REPL built from scratch"
documentation = "https://docs.rs/consulx"
homepage = "https://github.com/srotas-space/consulx"
repository = "https://github.com/srotas-space/consulx"
readme = "README.md"
license = "MIT"
categories = ["development-tools", "command-line-utilities", "web-programming::http-client"]
keywords = [
    "consul",
    "kv",
    "cli",
    "actix",
    "axum",
]



[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reedline = "0.44.0"
colored = "3.0.0"
anyhow = "1"
thiserror = "2.0.17"
base64 = "0.22"
